references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/PortionUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:aba39bd7f13a6bfa624b2c22fb4a79f8dfcab1a7ac16b390f455ed7b1308e965
size 1870
